Cambios en legibilidad y lógica de algunos métodos de datosAbiertos.py
